--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,16 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+.table-common table {
+  background: #fff;
+  border: solid rgb(227 227 227) 1px;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+.table-common .ant-table-thead {
+  background: #f7f7f7 !important;
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9;
+  overflow: auto;
+  /* width: 100%; */
 }
