--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,3 @@
-
 .table-common table {
   background: #fff;
   border: solid rgb(227 227 227) 1px;
@@ -13,4 +12,61 @@
   z-index: 9;
   overflow: auto;
   /* width: 100%; */
+}
+
+.full-page-loading {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.801);
+  z-index: 99999;
+}
+
+.message-error {
+  font-weight: 600;
+  text-align: left;
+  color: #f61a1a;
+}
+
+.required {
+  color: #f61a1a;
+}
+
+.text-truncate,
+.text-truncate-2,
+.text-truncate-3 {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal; /* Sửa từ 'initial' để giữ xuống dòng đúng */
+}
+
+.text-truncate {
+  -webkit-line-clamp: 1;
+}
+
+.text-truncate-2 {
+  -webkit-line-clamp: 2;
+}
+
+.text-truncate-3 {
+  -webkit-line-clamp: 3;
+}
+
+.post-image {
+  width: 100%;
+  height: 240px;
+  object-fit: cover;
+}
+
+.product-image {
+  width: 100%;
+  height: 160px;
+  object-fit: cover;
 }
