--- a/src/asset/scss/elements/_product.scss
+++ b/src/asset/scss/elements/_product.scss
@@ -815,7 +815,7 @@
         }
 
         ul {
-            list-style-type: none;
+            // list-style-type: none;
 
             li {
                 color: #666;
