--- a/src/asset/scss/components/_pages.scss
+++ b/src/asset/scss/components/_pages.scss
@@ -327,7 +327,7 @@
 
         .ps-page__right {
             min-width: 290px;
-            max-width: 290px;
+            max-width: 100%;
         }
     }
 
