--- a/src/asset/scss/elements/_block.scss
+++ b/src/asset/scss/elements/_block.scss
@@ -59,11 +59,12 @@
 }
 
 .ps-block--category {
-    margin-bottom: 30px;
+    // margin-bottom: 30px;
     padding: 20px 10px;
     text-align: center;
     transition: all 0.4s ease;
     border: 1px solid #bfbfbf;
+    height:100%;
 
     a {
         @include max-area();
@@ -152,11 +153,12 @@
 
     .ps-block__thumbnail {
         max-width: 175px;
+        flex: 2;
     }
 
     .ps-block__content {
         padding: 18px 10px 15px;
-
+        flex: 3;
         ul {
             li {
                 a {
