--- a/src/asset/scss/elements/_post.scss
+++ b/src/asset/scss/elements/_post.scss
@@ -51,7 +51,7 @@
     }
 
     .ps-post__title {
-        display: block;
+        // display: block;
         margin: 0 0 20px;
         font-size: 20px;
         font-weight: 600;
