--- a/src/asset/scss/modules/_header.scss
+++ b/src/asset/scss/modules/_header.scss
@@ -79,6 +79,7 @@
         .container {
             display: flex;
             flex-flow: row nowrap;
+            align-items: center;
 
             > * {
                 width: 100%;
