--- a/src/asset/scss/components/_pages.scss
+++ b/src/asset/scss/components/_pages.scss
@@ -258,6 +258,22 @@
         }
     }
 
+    .ps-block__header {
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-between;
+        margin-bottom: 20px;
+        padding-bottom: 16px;
+        border-bottom: 1px solid #e1e1e1;
+        align-items: center;
+        h3 {
+            margin-bottom: 0;
+            font-size: 24px;
+            font-weight: 400;
+            color: #000;
+            line-height: 1em;
+        }
+    }
     .ps-shopping {
         padding-bottom: 40px;
     }
