--- a/src/asset/scss/components/_section.scss
+++ b/src/asset/scss/components/_section.scss
@@ -339,13 +339,25 @@
 .ps-shop-brand {
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-between;
+    justify-content: start;
+    gap: 20px;
     align-items: center;
     @include media('<sm') {
         flex-flow: row wrap;
         > * {
             max-width: 20%;
             padding: 5px 10px;
+        }
+    }
+    img {
+        max-width: 100%;
+        height: auto;
+        object-fit: contain;
+        padding: 5px;
+        transition: transform 0.3s ease;
+
+        &:hover {
+            transform: scale(1.05);
         }
     }
     @include media('<xs') {
