--- a/src/asset/scss/elements/_block.scss
+++ b/src/asset/scss/elements/_block.scss
@@ -1237,7 +1237,7 @@
 
 .ps-block--categories-box {
     margin-bottom: 30px;
-    padding: 20px;
+    // padding: 20px;
     background-color: #ffffff;
     @extend %list-reset;
 
