--- a/src/asset/scss/components/_menu.scss
+++ b/src/asset/scss/components/_menu.scss
@@ -554,7 +554,7 @@
     }
 
     .ant-menu-item-active {
-        color: $color-1st;
-        background-color: transparent;
+        // color: $color-1st;
+        // background-color: transparent;
     }
 }
