--- a/src/asset/scss/components/_section.scss
+++ b/src/asset/scss/components/_section.scss
@@ -392,7 +392,7 @@
         .ps-layout__left {
             max-width: 100%;
             padding-right: 0;
-            display: none;
+            // display: none;
         }
         .ps-layout__right {
             max-width: 100%;
