--- a/src/asset/scss/elements/_block.scss
+++ b/src/asset/scss/elements/_block.scss
@@ -1289,7 +1289,10 @@
         padding: 20px;
         border: 1px solid transparent;
         transition: all 0.4s ease;
-
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid #bfbfbf;
         a {
             @include max-area;
         }
@@ -1322,7 +1325,7 @@
     .ps-block__content {
         display: flex;
         flex-flow: row wrap;
-
+        
         .ps-block__item {
             width: 100%;
             max-width: 20%;
@@ -1380,7 +1383,7 @@
     }
     @include media('<xs') {
         .ps-block__item {
-            padding: 0;
+            padding: 20px;
             margin-bottom: 15px;
 
             p {
