--- a/src/asset/scss/modules/_header.scss
+++ b/src/asset/scss/modules/_header.scss
@@ -117,7 +117,7 @@
 
         .header__left {
             .ps-logo {
-                display: none;
+                // display: none;
             }
 
             .menu--product-categories {
