--- a/src/asset/scss/elements/_button.scss
+++ b/src/asset/scss/elements/_button.scss
@@ -158,6 +158,7 @@ button.ps-btn {
         background-color: $color-heading;
         width: 100%;
         text-align: center;
+        color: #ffffff;
         &.ps-btn--outline {
             background-color: transparent;
             border: 2px solid $color-heading;
