--- a/styles/globals.css
+++ b/styles/globals.css
@@ -124,3 +124,18 @@
   height: 40px;
   border-radius: 50%;
 }
+
+.banner-slide {
+    width: 100%;
+    height: 600px; /* hoặc bất kỳ chiều cao cố định nào bạn muốn */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.banner-image {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; /* hoặc contain nếu muốn ảnh không cắt */
+}
